Switch Merge and update of config

--- a/test/config/DebugRun.config
+++ b/test/config/DebugRun.config
@@ -17,7 +17,7 @@ Threads=-1
 # These are used for testing and utilizing serialization
 #Patients=all
 # Replace patient file with it's associated patient state, if scenario has no conditions
-#UseStates=true
+UseStates=true
 # AutoSerialize = Directory,Period(in seconds, 0 turns off constant saving),TimeStampPeriods,AfterActions,Reload
 #AutoSerialization=./states/testing/,5,Off,On,On
 
