--- a/test/config/VerificationScenarios.config
+++ b/test/config/VerificationScenarios.config
@@ -24,143 +24,143 @@ Threads=-1
 
 Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./test_results/scenarios/
 
 @group
 
 Patient/BasicStandard.pba = ScenarioTest
 
 @group Patient
-Patient/AirwayObstructionVaried.pba = ScenarioTest
-Patient/AcuteStress.pba = ScenarioTest
-Patient/AsthmaAttackModerateAcute.pba = ScenarioTest
-Patient/AsthmaAttackSevereAcute.pba = ScenarioTest
-Patient/AsthmaAttackLifeThreateningAcute.pba = ScenarioTest
-Patient/Anemia30.pba = ScenarioTest
-Patient/ApneaVaried.pba = ScenarioTest
-Patient/Baroreceptors.pba = ScenarioTest
-Patient/BrainInjury.pba = ScenarioTest
-Patient/BronchoConstrictionVaried.pba = ScenarioTest
-Patient/COPDSevereEmphysema.pba = ScenarioTest
-Patient/COPDSevereBronchitis.pba = ScenarioTest
-Patient/Cough.pba = ScenarioTest
-Patient/CPRForceScaleMax.pba = ScenarioTest
-Patient/CPRForceScale.pba = ScenarioTest
-Patient/CPRForce.pba = ScenarioTest
-Patient/EffusionCondition.pba = ScenarioTest
-Patient/EffusionConditionPlus.pba = ScenarioTest
-Patient/EsophagealIntubation.pba = ScenarioTest
-Patient/HemorrhageClass2NoFluid.pba = ScenarioTest
-Patient/HemorrhageClass2Blood.pba = ScenarioTest
-Patient/HemorrhageClass2Saline.pba = ScenarioTest
-Patient/HemorrhageClass4NoFluid.pba = ScenarioTest
-Patient/HemorrhageCM1.pba = ScenarioTest
-Patient/HemorrhageCM2.pba = ScenarioTest
-Patient/Inhaler_OneActuation.pba = ScenarioTest
-Patient/Inhaler_OneActuationWithSpacer.pba = ScenarioTest
-Patient/Inhaler_OneActuationIncorrectUse.pba = ScenarioTest
-Patient/Inhaler_OneActuationWithSpacerIncorrectUse.pba = ScenarioTest
-Patient/Inhaler_TwoActuations.pba = ScenarioTest
-Patient/LobarPneumoniaModerateBothLungs.pba = ScenarioTest
-Patient/LobarPneumoniaSevereLeftLobe.pba = ScenarioTest
-Patient/LobarPneumoniaSevereRightLung.pba = ScenarioTest
-Patient/MainstemIntubation.pba = ScenarioTest
-Patient/RenalStenosisSevereBilateral.pba = ScenarioTest
-Patient/RenalStenosisModerateUnilateral.pba = ScenarioTest
-Patient/SinusBradycardia.pba = ScenarioTest
-Patient/SinusTachycardia.pba = ScenarioTest
-Patient/TensionPneumothoraxBilateral.pba = ScenarioTest
-Patient/TensionPneumothoraxClosedVaried.pba = ScenarioTest
-Patient/TensionPneumothoraxOpenVaried.pba = ScenarioTest
-Patient/VentricularSystolicDysfunction.pba = ScenarioTest
+patient/AirwayObstructionVaried.pba = ScenarioTest
+patient/AcuteStress.pba = ScenarioTest
+patient/AsthmaAttackModerateAcute.pba = ScenarioTest
+patient/AsthmaAttackSevereAcute.pba = ScenarioTest
+patient/AsthmaAttackLifeThreateningAcute.pba = ScenarioTest
+patient/Anemia30.pba = ScenarioTest
+patient/ApneaVaried.pba = ScenarioTest
+patient/Baroreceptors.pba = ScenarioTest
+patient/BrainInjury.pba = ScenarioTest
+patient/BronchoConstrictionVaried.pba = ScenarioTest
+patient/COPDSevereEmphysema.pba = ScenarioTest
+patient/COPDSevereBronchitis.pba = ScenarioTest
+patient/Cough.pba = ScenarioTest
+patient/CPRForceScaleMax.pba = ScenarioTest
+patient/CPRForceScale.pba = ScenarioTest
+patient/CPRForce.pba = ScenarioTest
+patient/EffusionCondition.pba = ScenarioTest
+patient/EffusionConditionPlus.pba = ScenarioTest
+patient/EsophagealIntubation.pba = ScenarioTest
+patient/HemorrhageClass2NoFluid.pba = ScenarioTest
+patient/HemorrhageClass2Blood.pba = ScenarioTest
+patient/HemorrhageClass2Saline.pba = ScenarioTest
+patient/HemorrhageClass4NoFluid.pba = ScenarioTest
+patient/HemorrhageCM1.pba = ScenarioTest
+patient/HemorrhageCM2.pba = ScenarioTest
+patient/Inhaler_OneActuation.pba = ScenarioTest
+patient/Inhaler_OneActuationWithSpacer.pba = ScenarioTest
+patient/Inhaler_OneActuationIncorrectUse.pba = ScenarioTest
+patient/Inhaler_OneActuationWithSpacerIncorrectUse.pba = ScenarioTest
+patient/Inhaler_TwoActuations.pba = ScenarioTest
+patient/LobarPneumoniaModerateBothLungs.pba = ScenarioTest
+patient/LobarPneumoniaSevereLeftLobe.pba = ScenarioTest
+patient/LobarPneumoniaSevereRightLung.pba = ScenarioTest
+patient/MainstemIntubation.pba = ScenarioTest
+patient/RenalStenosisSevereBilateral.pba = ScenarioTest
+patient/RenalStenosisModerateUnilateral.pba = ScenarioTest
+patient/SinusBradycardia.pba = ScenarioTest
+patient/SinusTachycardia.pba = ScenarioTest
+patient/TensionPneumothoraxBilateral.pba = ScenarioTest
+patient/TensionPneumothoraxClosedVaried.pba = ScenarioTest
+patient/TensionPneumothoraxOpenVaried.pba = ScenarioTest
+patient/VentricularSystolicDysfunction.pba = ScenarioTest
 
 @group EnergyEnvironment
-EnergyEnvironment/CarbonMonoxideExtreme.pba = ScenarioTest
-EnergyEnvironment/CarbonMonoxideThreshold.pba = ScenarioTest
-#EnergyEnvironment/CarbonMonoxideThresholdLong.pba = ScenarioTest
-EnergyEnvironment/ColdWaterSubmersion.pba = ScenarioTest
-EnergyEnvironment/ExerciseStages.pba = ScenarioTest
-EnergyEnvironment/ExerciseVO2max.pba = ScenarioTest
-EnergyEnvironment/FireFighter.pba = ScenarioTest
-EnergyEnvironment/HighAltitudeEnvironmentChange.pba = ScenarioTest
-EnergyEnvironment/HighAltitudeEnvironmentFileChange.pba = ScenarioTest
-EnergyEnvironment/InitialHighAltitudeEnvironmentFile.pba = ScenarioTest
-EnergyEnvironment/InitialHighAltitudeEnvironmentState.pba = ScenarioTest
-EnergyEnvironment/ThermalApplication.pba = ScenarioTest
+energyEnvironment/CarbonMonoxideExtreme.pba = ScenarioTest
+energyEnvironment/CarbonMonoxideThreshold.pba = ScenarioTest
+#energyEnvironment/CarbonMonoxideThresholdLong.pba = ScenarioTest
+energyEnvironment/ColdWaterSubmersion.pba = ScenarioTest
+energyEnvironment/ExerciseStages.pba = ScenarioTest
+energyEnvironment/ExerciseVO2max.pba = ScenarioTest
+energyEnvironment/FireFighter.pba = ScenarioTest
+energyEnvironment/HighAltitudeEnvironmentChange.pba = ScenarioTest
+energyEnvironment/HighAltitudeEnvironmentFileChange.pba = ScenarioTest
+energyEnvironment/InitialHighAltitudeEnvironmentFile.pba = ScenarioTest
+energyEnvironment/InitialHighAltitudeEnvironmentState.pba = ScenarioTest
+energyEnvironment/ThermalApplication.pba = ScenarioTest
 
 @group Anesthesia Machine
-AnesthesiaMachine/EndotrachealTubeLeakVaried.pba = ScenarioTest
-AnesthesiaMachine/ExpiratoryValveObstructionVaried.pba = ScenarioTest
-AnesthesiaMachine/ExpiratoryValveLeakVaried.pba = ScenarioTest
-AnesthesiaMachine/InspiratoryValveObstructionVaried.pba = ScenarioTest
-AnesthesiaMachine/InspiratoryValveLeakVaried.pba = ScenarioTest
-AnesthesiaMachine/MaskLeakVaried.pba = ScenarioTest
-AnesthesiaMachine/OxygenTankPressureLoss.pba = ScenarioTest
-AnesthesiaMachine/OxygenWallPressureLoss.pba = ScenarioTest
-AnesthesiaMachine/SodaLimeFailureVaried.pba = ScenarioTest
-AnesthesiaMachine/VaporizerFailureVaried.pba = ScenarioTest
-AnesthesiaMachine/VentilatorPressureLossVaried.pba = ScenarioTest
-AnesthesiaMachine/YpieceDisconnectVaried.pba = ScenarioTest
+anesthesiaMachine/EndotrachealTubeLeakVaried.pba = ScenarioTest
+anesthesiaMachine/ExpiratoryValveObstructionVaried.pba = ScenarioTest
+anesthesiaMachine/ExpiratoryValveLeakVaried.pba = ScenarioTest
+anesthesiaMachine/InspiratoryValveObstructionVaried.pba = ScenarioTest
+anesthesiaMachine/InspiratoryValveLeakVaried.pba = ScenarioTest
+anesthesiaMachine/MaskLeakVaried.pba = ScenarioTest
+anesthesiaMachine/OxygenTankPressureLoss.pba = ScenarioTest
+anesthesiaMachine/OxygenWallPressureLoss.pba = ScenarioTest
+anesthesiaMachine/SodaLimeFailureVaried.pba = ScenarioTest
+anesthesiaMachine/VaporizerFailureVaried.pba = ScenarioTest
+anesthesiaMachine/VentilatorPressureLossVaried.pba = ScenarioTest
+anesthesiaMachine/YpieceDisconnectVaried.pba = ScenarioTest
 
 @group Drugs
-Drug/Albuterol.pba = ScenarioTest
-Drug/Desflurane.pba = ScenarioTest
-Drug/Epinephrine.pba = ScenarioTest
-Drug/Fentanyl.pba = ScenarioTest
-Drug/Furosemide.pba = ScenarioTest
-Drug/Ketamine.pba = ScenarioTest
-Drug/Midazolam.pba = ScenarioTest
-Drug/Morphine.pba = ScenarioTest
-Drug/Naloxone.pba = ScenarioTest
-Drug/Pralidoxime.pba = ScenarioTest
-Drug/Prednisone.pba = ScenarioTest
-Drug/Propofol.pba = ScenarioTest
-Drug/Rocuronium.pba = ScenarioTest
-Drug/Succinylcholine.pba = ScenarioTest
+drug/Albuterol.pba = ScenarioTest
+drug/Desflurane.pba = ScenarioTest
+drug/Epinephrine.pba = ScenarioTest
+drug/Fentanyl.pba = ScenarioTest
+drug/Furosemide.pba = ScenarioTest
+drug/Ketamine.pba = ScenarioTest
+drug/Midazolam.pba = ScenarioTest
+drug/Morphine.pba = ScenarioTest
+drug/Naloxone.pba = ScenarioTest
+drug/Pralidoxime.pba = ScenarioTest
+drug/Prednisone.pba = ScenarioTest
+drug/Propofol.pba = ScenarioTest
+drug/Rocuronium.pba = ScenarioTest
+drug/Succinylcholine.pba = ScenarioTest
 
 @group ConsumeMeal
-#ConsumeMeal/12hrPreOp.pba = ScenarioTest
-#ConsumeMeal/Dehydration.pba = ScenarioTest
-#ConsumeMeal/PostMeal2hr.pba = ScenarioTest
-#ConsumeMeal/SalineIngestion.pba = ScenarioTest
-#ConsumeMeal/Starvation.pba = ScenarioTest
-#ConsumeMeal/WaterIngestion.pba = ScenarioTest
+#consumeMeal/12hrPreOp.pba = ScenarioTest
+#consumeMeal/Dehydration.pba = ScenarioTest
+#consumeMeal/PostMeal2hr.pba = ScenarioTest
+#consumeMeal/SalineIngestion.pba = ScenarioTest
+#consumeMeal/Starvation.pba = ScenarioTest
+#consumeMeal/WaterIngestion.pba = ScenarioTest
 
 @group Combined
-Combined/Gus.pba = ScenarioTest
-Combined/Joel.pba = ScenarioTest
-Combined/Hassan.pba = ScenarioTest
-Combined/Cynthia.pba = ScenarioTest
-Combined/Nathan.pba = ScenarioTest
+combined/Gus.pba = ScenarioTest
+combined/Joel.pba = ScenarioTest
+combined/Hassan.pba = ScenarioTest
+combined/Cynthia.pba = ScenarioTest
+combined/Nathan.pba = ScenarioTest
 
 @group Showcase
-Showcase/CombatMultitrauma.pba = ScenarioTest
-Showcase/AsthmaAttack.pba = ScenarioTest
-Showcase/EnvironmentExposure.pba = ScenarioTest
-Showcase/HeatStroke.pba = ScenarioTest
+showcase/CombatMultitrauma.pba = ScenarioTest
+showcase/AsthmaAttack.pba = ScenarioTest
+showcase/EnvironmentExposure.pba = ScenarioTest
+showcase/HeatStroke.pba = ScenarioTest
 
 @group Miscellaneous
-#Miscellaneous/12hrFastAsCondition.pba = ScenarioTest
-Miscellaneous/AirwayObstructionDeath.pba = ScenarioTest
-Miscellaneous/AnesthesiaMachineVariedConfiguration.pba = ScenarioTest
-Miscellaneous/AsthmaAttackDeath.pba = ScenarioTest
-Miscellaneous/BleedToDeath.pba = ScenarioTest
-Miscellaneous/Comprehensive.pba = ScenarioTest
-#Miscellaneous/FullDay.pba = ScenarioTest
-Miscellaneous/HouseFireSmoke.pba = ScenarioTest
-Miscellaneous/ImpairedAlveolarExchangeFraction.pba = ScenarioTest
-Miscellaneous/ImpairedAlveolarExchangeSurfaceArea.pba = ScenarioTest
-Miscellaneous/MechanicalVentilation.pba = ScenarioTest
-Miscellaneous/MultiDrug.pba = ScenarioTest
-Miscellaneous/TBIandDrugs.pba = ScenarioTest
+#miscellaneous/12hrFastAsCondition.pba = ScenarioTest
+miscellaneous/AirwayObstructionDeath.pba = ScenarioTest
+miscellaneous/AnesthesiaMachineVariedConfiguration.pba = ScenarioTest
+miscellaneous/AsthmaAttackDeath.pba = ScenarioTest
+miscellaneous/BleedToDeath.pba = ScenarioTest
+miscellaneous/Comprehensive.pba = ScenarioTest
+mMiscellaneous/FullDay.pba = ScenarioTest
+miscellaneous/HouseFireSmoke.pba = ScenarioTest
+miscellaneous/ImpairedAlveolarExchangeFraction.pba = ScenarioTest
+miscellaneous/ImpairedAlveolarExchangeSurfaceArea.pba = ScenarioTest
+miscellaneous/MechanicalVentilation.pba = ScenarioTest
+miscellaneous/MultiDrug.pba = ScenarioTest
+miscellaneous/TBIandDrugs.pba = ScenarioTest
 
 @group Compartments
-#Compartments/UserSpecific.pba = ScenarioTest
-Compartments/AnesthesiaMachineCompartments.pba = ScenarioTest
-Compartments/ChymeCompartments.pba = ScenarioTest
-Compartments/LymphCompartments.pba = ScenarioTest
-Compartments/PulmonaryCompartments.pba = ScenarioTest
-Compartments/TemperatureCompartments.pba = ScenarioTest
-Compartments/TissueCompartments.pba = ScenarioTest
-Compartments/UrineCompartments.pba = ScenarioTest
-Compartments/VascularCompartments.pba = ScenarioTest
+#compartments/UserSpecific.pba = ScenarioTest
+compartments/AnesthesiaMachineCompartments.pba = ScenarioTest
+compartments/ChymeCompartments.pba = ScenarioTest
+compartments/LymphCompartments.pba = ScenarioTest
+compartments/PulmonaryCompartments.pba = ScenarioTest
+compartments/TemperatureCompartments.pba = ScenarioTest
+compartments/TissueCompartments.pba = ScenarioTest
+compartments/UrineCompartments.pba = ScenarioTest
+compartments/VascularCompartments.pba = ScenarioTest
