Minor bug fixes

--- a/test/config/VerificationScenarios.config
+++ b/test/config/VerificationScenarios.config
@@ -28,7 +28,7 @@ Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./te
 
 @group
 
-Patient/BasicStandard.pba = ScenarioTest
+patient/BasicStandard.pba = ScenarioTest
 
 @group Patient
 patient/AirwayObstructionVaried.pba = ScenarioTest
