Validation is good, how-to's are good (C++ and Java)

--- a/test/config/LongVerificationScenarios.config
+++ b/test/config/LongVerificationScenarios.config
@@ -24,6 +24,6 @@ Threads=-1
 
 Executor=mil.tatrc.physiology.pulse.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./test_results/scenarios
 
-Miscellaneous/12hrFast.pba = ScenarioTest
+miscellaneous/12hrFast.pba = ScenarioTest
