--- a/test/config/ValidationDrugs.config
+++ b/test/config/ValidationDrugs.config
@@ -20,22 +20,22 @@ Threads=-1
 # AutoSerialize = Directory,Period(in seconds, 0 turns off constant saving),TimeStampPeriods,AfterActions,Reload
 #AutoSerialization=./states/testing/,5,Off,On,On
 
-Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
+Executor=mil.tatrc.physiology.pulse.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/ #Results=/BasicStandard
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./test_results/scenarios
 
 
-Validation/AlbuterolValidation.pba=ScenarioTest
-#Validation/DesfluraneValidation.pba=ScenarioTest
-Validation/EpinephrineValidation.pba=ScenarioTest
-Validation/FentanylValidation.pba=ScenarioTest
-Validation/FurosemideValidation.pba=ScenarioTest
-Validation/KetamineValidation.pba=ScenarioTest
-Validation/MidazolamValidation.pba=ScenarioTest
-Validation/MorphineValidation.pba=ScenarioTest
-Validation/NaloxoneValidation.pba=ScenarioTest
-Validation/PralidoximeValidation.pba=ScenarioTest
-Validation/PrednisoneValidation.pba=ScenarioTest
-Validation/PropofolValidation.pba=ScenarioTest
-Validation/RocuroniumValidation.pba=ScenarioTest
-Validation/SuccinylcholineValidation.pba=ScenarioTest
+validation/drugs/AlbuterolValidation.pba=ScenarioTest
+#validation/drugs/DesfluraneValidation.pba=ScenarioTest
+validation/drugs/EpinephrineValidation.pba=ScenarioTest
+validation/drugs/FentanylValidation.pba=ScenarioTest
+validation/drugs/FurosemideValidation.pba=ScenarioTest
+validation/drugs/KetamineValidation.pba=ScenarioTest
+validation/drugs/MidazolamValidation.pba=ScenarioTest
+validation/drugs/MorphineValidation.pba=ScenarioTest
+validation/drugs/NaloxoneValidation.pba=ScenarioTest
+validation/drugs/PralidoximeValidation.pba=ScenarioTest
+validation/drugs/PrednisoneValidation.pba=ScenarioTest
+validation/drugs/PropofolValidation.pba=ScenarioTest
+validation/drugs/RocuroniumValidation.pba=ScenarioTest
+validation/drugs/SuccinylcholineValidation.pba=ScenarioTest
