--- a/test/config/ValidationPatients.config
+++ b/test/config/ValidationPatients.config
@@ -16,11 +16,11 @@ Patients=all
 # AutoSerialize = Directory,Period(in seconds, 0 turns off constant saving),TimeStampPeriods,AfterActions,Reload
 #AutoSerialization=./states/testing/,5,Off,On,On
 
-Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
+Executor=mil.tatrc.physiology.pulse.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./test_results/scenarios
 
 @group
 
-Validation/Patient-Validation.pba = ScenarioTest
+validation/patients/Patient-Validation.pba = ScenarioTest
 
