--- a/test/config/ValidationSystems.config
+++ b/test/config/ValidationSystems.config
@@ -16,18 +16,18 @@ Threads=-1
 # AutoSerialize = Directory,Period(in seconds, 0 turns off constant saving),TimeStampPeriods,AfterActions,Reload
 #AutoSerialization=./states/testing/,5,Off,On,On
 
-Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
+Executor=mil.tatrc.physiology.pulse.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./test_results/scenarios
 
 @group
 
-Validation/BloodChemistryValidation.pba = ScenarioTest
-Validation/CardiovascularValidation.pba = ScenarioTest
-Validation/EndocrineValidation.pba = ScenarioTest
-Validation/EnergyValidation.pba = ScenarioTest
-Validation/GastrointestinalValidation.pba = ScenarioTest
-Validation/NervousValidation.pba = ScenarioTest
-Validation/RenalValidation.pba = ScenarioTest
-Validation/RespiratoryValidation.pba = ScenarioTest
-Validation/TissueValidation.pba = ScenarioTest
+validation/systems/BloodChemistryValidation.pba = ScenarioTest
+validation/systems/CardiovascularValidation.pba = ScenarioTest
+validation/systems/EndocrineValidation.pba = ScenarioTest
+validation/systems/EnergyValidation.pba = ScenarioTest
+validation/systems/GastrointestinalValidation.pba = ScenarioTest
+validation/systems/NervousValidation.pba = ScenarioTest
+validation/systems/RenalValidation.pba = ScenarioTest
+validation/systems/RespiratoryValidation.pba = ScenarioTest
+validation/systems/TissueValidation.pba = ScenarioTest
