Bug fixes and state checking
Added Null values for anesthesia machine enums
Cleaned up java switch enums too while i was at it
Fixed Dehydration bug
Reverting back to Jeff's Renal fixes (I overwrote them somehow)

--- a/test/config/ValidationDrugs.config
+++ b/test/config/ValidationDrugs.config
@@ -26,7 +26,7 @@ Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./te
 
 
 validation/drugs/AlbuterolValidation.pba=ScenarioTest
-#validation/drugs/DesfluraneValidation.pba=ScenarioTest
+validation/drugs/DesfluraneValidation.pba=ScenarioTest
 validation/drugs/EpinephrineValidation.pba=ScenarioTest
 validation/drugs/FentanylValidation.pba=ScenarioTest
 validation/drugs/FurosemideValidation.pba=ScenarioTest
