--- a/test/config/VerificationScenarios.config
+++ b/test/config/VerificationScenarios.config
@@ -44,9 +44,9 @@ patient/BronchoConstrictionVaried.pba = ScenarioTest
 patient/COPDSevereEmphysema.pba = ScenarioTest
 patient/COPDSevereBronchitis.pba = ScenarioTest
 patient/Cough.pba = ScenarioTest
-patient/CPRForceScaleMax.pba = ScenarioTest
-patient/CPRForceScale.pba = ScenarioTest
-patient/CPRForce.pba = ScenarioTest
+*patient/CPRForceScaleMax.pba = ScenarioTest
+*patient/CPRForceScale.pba = ScenarioTest
+*patient/CPRForce.pba = ScenarioTest
 patient/EffusionCondition.pba = ScenarioTest
 patient/EffusionConditionPlus.pba = ScenarioTest
 patient/EsophagealIntubation.pba = ScenarioTest
@@ -75,32 +75,32 @@ patient/TensionPneumothoraxOpenVaried.pba = ScenarioTest
 patient/VentricularSystolicDysfunction.pba = ScenarioTest
 
 @group EnergyEnvironment
-energyEnvironment/CarbonMonoxideExtreme.pba = ScenarioTest
-energyEnvironment/CarbonMonoxideThreshold.pba = ScenarioTest
-#energyEnvironment/CarbonMonoxideThresholdLong.pba = ScenarioTest
-energyEnvironment/ColdWaterSubmersion.pba = ScenarioTest
-energyEnvironment/ExerciseStages.pba = ScenarioTest
-energyEnvironment/ExerciseVO2max.pba = ScenarioTest
-energyEnvironment/FireFighter.pba = ScenarioTest
-energyEnvironment/HighAltitudeEnvironmentChange.pba = ScenarioTest
-energyEnvironment/HighAltitudeEnvironmentFileChange.pba = ScenarioTest
-energyEnvironment/InitialHighAltitudeEnvironmentFile.pba = ScenarioTest
-energyEnvironment/InitialHighAltitudeEnvironmentState.pba = ScenarioTest
-energyEnvironment/ThermalApplication.pba = ScenarioTest
+energyenvironment/CarbonMonoxideExtreme.pba = ScenarioTest
+energyenvironment/CarbonMonoxideThreshold.pba = ScenarioTest
+#energeEnvironment/CarbonMonoxideThresholdLong.pba = ScenarioTest
+energyenvironment/ColdWaterSubmersion.pba = ScenarioTest
+energyenvironment/ExerciseStages.pba = ScenarioTest
+energyenvironment/ExerciseVO2max.pba = ScenarioTest
+energyenvironment/FireFighter.pba = ScenarioTest
+energyenvironment/HighAltitudeEnvironmentChange.pba = ScenarioTest
+energyenvironment/HighAltitudeEnvironmentFileChange.pba = ScenarioTest
+energyenvironment/InitialHighAltitudeEnvironmentFile.pba = ScenarioTest
+energyenvironment/InitialHighAltitudeEnvironmentState.pba = ScenarioTest
+energyenvironment/ThermalApplication.pba = ScenarioTest
 
 @group Anesthesia Machine
-anesthesiaMachine/EndotrachealTubeLeakVaried.pba = ScenarioTest
-anesthesiaMachine/ExpiratoryValveObstructionVaried.pba = ScenarioTest
-anesthesiaMachine/ExpiratoryValveLeakVaried.pba = ScenarioTest
-anesthesiaMachine/InspiratoryValveObstructionVaried.pba = ScenarioTest
-anesthesiaMachine/InspiratoryValveLeakVaried.pba = ScenarioTest
-anesthesiaMachine/MaskLeakVaried.pba = ScenarioTest
-anesthesiaMachine/OxygenTankPressureLoss.pba = ScenarioTest
-anesthesiaMachine/OxygenWallPressureLoss.pba = ScenarioTest
-anesthesiaMachine/SodaLimeFailureVaried.pba = ScenarioTest
-anesthesiaMachine/VaporizerFailureVaried.pba = ScenarioTest
-anesthesiaMachine/VentilatorPressureLossVaried.pba = ScenarioTest
-anesthesiaMachine/YpieceDisconnectVaried.pba = ScenarioTest
+anesthesiamachine/EndotrachealTubeLeakVaried.pba = ScenarioTest
+anesthesiamachine/ExpiratoryValveObstructionVaried.pba = ScenarioTest
+anesthesiamachine/ExpiratoryValveLeakVaried.pba = ScenarioTest
+anesthesiamachine/InspiratoryValveObstructionVaried.pba = ScenarioTest
+anesthesiamachine/InspiratoryValveLeakVaried.pba = ScenarioTest
+anesthesiamachine/MaskLeakVaried.pba = ScenarioTest
+anesthesiamachine/OxygenTankPressureLoss.pba = ScenarioTest
+anesthesiamachine/OxygenWallPressureLoss.pba = ScenarioTest
+anesthesiamachine/SodaLimeFailureVaried.pba = ScenarioTest
+anesthesiamachine/VaporizerFailureVaried.pba = ScenarioTest
+anesthesiamachine/VentilatorPressureLossVaried.pba = ScenarioTest
+anesthesiamachine/YpieceDisconnectVaried.pba = ScenarioTest
 
 @group Drugs
 drug/Albuterol.pba = ScenarioTest
@@ -145,13 +145,13 @@ miscellaneous/AirwayObstructionDeath.pba = ScenarioTest
 miscellaneous/AnesthesiaMachineVariedConfiguration.pba = ScenarioTest
 miscellaneous/AsthmaAttackDeath.pba = ScenarioTest
 miscellaneous/BleedToDeath.pba = ScenarioTest
-miscellaneous/Comprehensive.pba = ScenarioTest
-mMiscellaneous/FullDay.pba = ScenarioTest
+*miscellaneous/Comprehensive.pba = ScenarioTest
+#miscellaneous/FullDay.pba = ScenarioTest
 miscellaneous/HouseFireSmoke.pba = ScenarioTest
 miscellaneous/ImpairedAlveolarExchangeFraction.pba = ScenarioTest
 miscellaneous/ImpairedAlveolarExchangeSurfaceArea.pba = ScenarioTest
 miscellaneous/MechanicalVentilation.pba = ScenarioTest
-miscellaneous/MultiDrug.pba = ScenarioTest
+*miscellaneous/MultiDrug.pba = ScenarioTest
 miscellaneous/TBIandDrugs.pba = ScenarioTest
 
 @group Compartments
