Turning scenarios back on.

--- a/test/config/VerificationScenarios.config
+++ b/test/config/VerificationScenarios.config
@@ -44,9 +44,9 @@ patient/BronchoConstrictionVaried.pba = ScenarioTest
 patient/COPDSevereEmphysema.pba = ScenarioTest
 patient/COPDSevereBronchitis.pba = ScenarioTest
 patient/Cough.pba = ScenarioTest
-*patient/CPRForceScaleMax.pba = ScenarioTest
-*patient/CPRForceScale.pba = ScenarioTest
-*patient/CPRForce.pba = ScenarioTest
+patient/CPRForceScaleMax.pba = ScenarioTest
+patient/CPRForceScale.pba = ScenarioTest
+patient/CPRForce.pba = ScenarioTest
 patient/EffusionCondition.pba = ScenarioTest
 patient/EffusionConditionPlus.pba = ScenarioTest
 patient/EsophagealIntubation.pba = ScenarioTest
@@ -145,13 +145,13 @@ miscellaneous/AirwayObstructionDeath.pba = ScenarioTest
 miscellaneous/AnesthesiaMachineVariedConfiguration.pba = ScenarioTest
 miscellaneous/AsthmaAttackDeath.pba = ScenarioTest
 miscellaneous/BleedToDeath.pba = ScenarioTest
-*miscellaneous/Comprehensive.pba = ScenarioTest
+miscellaneous/Comprehensive.pba = ScenarioTest
 #miscellaneous/FullDay.pba = ScenarioTest
 miscellaneous/HouseFireSmoke.pba = ScenarioTest
 miscellaneous/ImpairedAlveolarExchangeFraction.pba = ScenarioTest
 miscellaneous/ImpairedAlveolarExchangeSurfaceArea.pba = ScenarioTest
 miscellaneous/MechanicalVentilation.pba = ScenarioTest
-*miscellaneous/MultiDrug.pba = ScenarioTest
+miscellaneous/MultiDrug.pba = ScenarioTest
 miscellaneous/TBIandDrugs.pba = ScenarioTest
 
 @group Compartments
