--- a/test/config/DebugRun.config
+++ b/test/config/DebugRun.config
@@ -30,7 +30,4 @@ Macro EngineUnitTest=EngineUnitTestDriver FastPlot Baseline=unit_tests/pulse/ Co
 Macro EngineUnitTestFull=EngineUnitTestDriver FullPlot Baseline=unit_tests/pulse/ Computed=./test_results/unit_tests/pulse
 Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./test_results/scenarios
 
-#patient/BasicStandard.pba = ScenarioTest
-patient/CPRForceScaleMax.pba = ScenarioTest
-patient/CPRForceScale.pba = ScenarioTest
-patient/CPRForce.pba = ScenarioTest
+patient/BasicStandard.pba = ScenarioTest
