Corrected list of scenarios in ConsumeMeal directory.  Added example to ScenarioFile.md.

--- a/test/config/VerificationScenarios.config
+++ b/test/config/VerificationScenarios.config
@@ -119,9 +119,10 @@ drug/Rocuronium.pba = ScenarioTest
 drug/Succinylcholine.pba = ScenarioTest
 
 @group ConsumeMeal
-#consumeMeal/12hrPreOp.pba = ScenarioTest
+#consumeMeal/ConsumeMeal2hrAgo.pba = ScenarioTest
 #consumeMeal/Dehydration.pba = ScenarioTest
-#consumeMeal/PostMeal2hr.pba = ScenarioTest
+#consumeMeal/Peronnet300mL.pba = ScenarioTest
+#consumeMeal/RunningOnEmpty.pba = ScenarioTest
 #consumeMeal/SalineIngestion.pba = ScenarioTest
 #consumeMeal/Starvation.pba = ScenarioTest
 #consumeMeal/WaterIngestion.pba = ScenarioTest
