Fixed typo and we don't need to run this each time

--- a/test/config/VerificationScenarios.config
+++ b/test/config/VerificationScenarios.config
@@ -77,7 +77,7 @@ patient/VentricularSystolicDysfunction.pba = ScenarioTest
 @group EnergyEnvironment
 energyenvironment/CarbonMonoxideExtreme.pba = ScenarioTest
 energyenvironment/CarbonMonoxideThreshold.pba = ScenarioTest
-energeEnvironment/CarbonMonoxideThresholdLong.pba = ScenarioTest
+#energyEnvironment/CarbonMonoxideThresholdLong.pba = ScenarioTest
 energyenvironment/ColdWaterSubmersion.pba = ScenarioTest
 energyenvironment/ExerciseStages.pba = ScenarioTest
 energyenvironment/ExerciseVO2max.pba = ScenarioTest
