--- a/test/config/PlotRun.config
+++ b/test/config/PlotRun.config
@@ -84,7 +84,7 @@ HemorrhageClass2Saline=ActionEventPlotter NoGrid Title=None RemoveLegends Header
 HemorrhageClass2Saline=ActionEventPlotter Header=BloodVolume(L) OutputOverride=./docs/html/plots/Cardiovascular LegendOnly ImageDimensions=830,150 OutputFilename=Class2Saline_Legend.jpg
 #CardiovascularValidation=MultiPlotter Y1=RightHeart-Volume(mL),LeftHeart-Volume(mL),VenaCava-Volume(mL),PulmonaryArteries-Volume(mL),PulmonaryCapillaries-Volume(mL),PulmonaryVeins-Volume(mL),RightArmVasculature-Volume(mL),RightLegVasculature-Volume(mL),LeftArmVasculature-Volume(mL),LeftLegVasculature-Volume(mL),BrainVasculature-Volume(mL),LiverVasculature-Volume(mL),KidneyVasculature-Volume(mL),Aorta-Volume(mL),MyocardiumVasculature-Volume(mL),SplanchnicVasculature-Volume(mL),SkinVasculature-Volume(mL),FatVasculature-Volume(mL) X1=Time(s) VerificationDir=validation/systems/ Title=Blood_Compartment_Volumes Y1Label=BloodVolume(mL) OutputOverride=./docs/html/plots/Cardiovascular 
 #heart faliure
-VentricularSystolicDysfunction=ActionEventPlotter NoGrid Title=None Header=BloodVolume(mL) OutputOverride=./docs/html/plots/Cardiovascular OutputFilename=HeartFailure.jpg
+VentricularSystolicDysfunction=ActionEventPlotter NoGrid Title=None Header=BloodVolume(L) OutputOverride=./docs/html/plots/Cardiovascular OutputFilename=HeartFailure.jpg
 
 ##### Drugs Methodology Report #####
 # Validation
