--- a/test/config/DebugPlots.config
+++ b/test/config/DebugPlots.config
@@ -56,3 +56,4 @@ Plotter=mil.tatrc.physiology.utilities.csv.plots.RespiratoryPFTPlotter
 
 
 #PralidoximeValidation=ActionEventPlotter Title=Pralidoxime NoActions NoEvents LogAxis Header=Pralidoxime-PlasmaConcentration(ug/L) DataPathOverride=./Scenarios/Validation/ DataFileOverride=PralidoximeValidationResults.txt ExperimentalData=../docs/Validation/Pharmacokinetic/CSVs/Pralidoxime.txt OutputOverride=..\docs\Doxygen\html\plots\Drugs
+VentricularSystolicDysfunction=ActionEventPlotter NoGrid Title=None Header=BloodVolume(L) OutputOverride=./docs/html/plots/Cardiovascular OutputFilename=HeartFailure.jpg
