Added examples for getting event and logging data pushed to csharp

--- a/sdk/howto/csharp/HowToCSharp.csproj
+++ b/sdk/howto/csharp/HowToCSharp.csproj
@@ -55,7 +55,7 @@
   <ItemGroup>
     <Reference Include="PulseCLR, Version=0.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\builds\csharp\install\bin\release\PulseCLR.dll</HintPath>
+      <HintPath>..\..\..\..\builds\csharp\Pulse\Debug\PulseCLR.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
