--- a/verification/CMakeLists.txt
+++ b/verification/CMakeLists.txt
@@ -11,7 +11,7 @@ set(ExternalData_LINK_CONTENT SHA512)
 set(ExternalData_TIMEOUT_ABSOLUTE 0)
 
 set(INC_DOWNLOAD)
-if(DOWNLOAD_BASELINES)
+if(PULSE_DOWNLOAD_BASELINES)
   set(INC_DOWNLOAD ALL)
 else()
   set_target_properties(ExternalData PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
